--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <p class="logo-name">Space News</p>
-        <div class="header-links">
-            <p>This Week</p>
-            <p>Top Quote</p>
-            <p>Subscribe</p>
+    <div class="header-bg">
+        <div class="header">
+            <p class="logo-name">Space News</p>
+            <div class="header-links">
+                <p>This Week</p>
+                <p>Top Quote</p>
+                <p>Subscribe</p>
+            </div>
         </div>
     </div>
-    <div class="landing">
-        <div class="header-info">
-            <h1>Learn more about the cosmos in real time</h1>
-            <p><strong>Space is for everybody.</strong>  It’s not just for a few people in science or math, or for a select group of astronauts. That’s our new frontier out there, and it’s everybody’s business to know about space.</p>
-            <button class="button-1">Subscribe</button>
-        </div>
-        <div class="header-image">
-            <p>placeholder text for an image</p>
+    <div class="landing-bg">
+        <div class="landing">
+            <div class="header-info">
+                <h1>Learn more about the cosmos in real time</h1>
+                <p><strong>Space is for everybody.</strong>  It’s not just for a few people in science or math, or for a select group of astronauts. That’s our new frontier out there, and it’s everybody’s business to know about space.</p>
+                <button class="button-1">Subscribe</button>
+            </div>
+            <div class="header-image">
+                <p>placeholder text for an image</p>
+            </div>
         </div>
     </div>
     <div class="grid">
