Finish 1st iteration of the html

--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
         </div>
     </div>
     <div class="grid">
-        <h2>This Week's Headlines</h2>
+        <h2>Feast Your Eyes</h2>
         <div class="image-row">
             <div class="image-1">
                 <p class="placeholder"></p>
-                <p>The beauty of a supernova</p>
+                <p class="subtext">Galaxy 1</p>
             </div>
             <div class="image-2">
                 <p class="placeholder"></p>
-                <p>The galxies in space</p>
+                <p class="subtext">Galaxy 2</p>
             </div>
             <div class="image-3">
                 <p class="placeholder"></p>
-                <p>A Nebula in action</p>
+                <p class="subtext">Galaxy 3</p>
             </div>
             <div class="image-4">
                 <p class="placeholder"></p>
-                <p>More galaxies, why not?</p>
+                <p class="subtext">Galaxy 4</p>
             </div>
         </div>
     </div>
@@ -55,8 +55,10 @@
         <p class="author">~ Carl Sagan</p>
     </div>
     <div class="cta">
-        <p>The Universe Awaits</p>
-        <p>Are you ready to join the generation of children of time?</p>
+        <div class="cta-a">
+            <p class="cta-1">The Universe Awaits</p>
+            <p class="cta-2">Are you ready to join the generation of children of time?</p>
+        </div>
         <button- class="button-2">Join Us</button>
     </div>
     <div class="footer">
