Rewrite html from scratch

--- a/index.html
+++ b/index.html
@@ -7,62 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header-bg">
-        <div class="header">
-            <p class="logo-name">Space News</p>
-            <div class="header-links">
-                <p>This Week</p>
-                <p>Top Quote</p>
-                <p>Subscribe</p>
-            </div>
+    <div class="header">
+        <p class="logo-text">
+            Header Logo
+        </p>
+        <div class="links">
+            <p>header link one</p>
+            <p>header link two</p>
+            <p>header link three</p>
         </div>
     </div>
-    <div class="landing-bg">
-        <div class="landing">
-            <div class="header-info">
-                <h1>Learn more about the cosmos in real time</h1>
-                <p><strong>Space is for everybody.</strong>  It’s not just for a few people in science or math, or for a select group of astronauts. That’s our new frontier out there, and it’s everybody’s business to know about space.</p>
-                <button class="button-1">Subscribe</button>
-            </div>
-            <div class="header-image">
-                <p>placeholder text for an image</p>
-            </div>
+    <div class="landing">
+        <div class="hero">
+            <p class="hero-main">This website is awesome</p>
+            <p class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button class="hero-button">Sign Up</button>
+        </div>
+        <div class="hero-image">
+            <p>This is a placeholder image</p>
         </div>
     </div>
     <div class="grid">
-        <h2>Feast Your Eyes</h2>
-        <div class="image-row">
-            <div class="image-1">
-                <p class="placeholder"></p>
-                <p class="subtext">Galaxy 1</p>
-            </div>
-            <div class="image-2">
-                <p class="placeholder"></p>
-                <p class="subtext">Galaxy 2</p>
-            </div>
-            <div class="image-3">
-                <p class="placeholder"></p>
-                <p class="subtext">Galaxy 3</p>
-            </div>
-            <div class="image-4">
-                <p class="placeholder"></p>
-                <p class="subtext">Galaxy 4</p>
-            </div>
-        </div>
-    </div>
-    <div class="quotation">
-        <p class="quote">Somewhere, something incredible is waiting to be known.</p>
-        <p class="author">~ Carl Sagan</p>
-    </div>
-    <div class="cta">
-        <div class="cta-a">
-            <p class="cta-1">The Universe Awaits</p>
-            <p class="cta-2">Are you ready to join the generation of children of time?</p>
-        </div>
-        <button- class="button-2">Join Us</button>
-    </div>
-    <div class="footer">
-        <p>Copyright @ TheMukanzi 2023</p>
+        <p class="inf0-header">Some random information</p>
     </div>
 </body>
 </html>
