--- a/index.html
+++ b/index.html
@@ -28,7 +28,37 @@
         </div>
     </div>
     <div class="grid">
-        <p class="inf0-header">Some random information</p>
+        <p class="grid-header">Some random information</p>
+        <div class="main-grid">
+            <div class="grid-box">
+                <div class="empty"></div>
+                <p class="box-info">This is some subtext under an illustration or an image</p>
+            </div>
+            <div class="grid-box">
+                <div class="empty"></div>
+                <p class="box-info">This is some subtext under an illustration or an image</p>
+            </div>
+            <div class="grid-box">
+                <div class="empty"></div>
+                <p class="box-info">This is some subtext under an illustration or an image</p>
+            </div>
+            <div class="grid-box">
+                <div class="empty"></div>
+                <p class="box-info">This is some subtext under an illustration or an image</p>
+            </div>
+        </div>
     </div>
+    <div class="quotation">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="author">-Thor, God of Thunder</p>
+    </div>
+    <div class="cta">
+        <div class="cta-text">
+            <p class="cta-header">Call to action! It's Time</p>
+            <p class="cta-sub">Sign up for our product using that button right over there</p>
+        </div>
+        <button class="cta-button">Sign Up</button>
+    </div>
+    <p class="footer">Copyright © TheMukanzi 2023</p>
 </body>
 </html>
